Fix spacing issue with padding

--- a/css/style.css
+++ b/css/style.css
@@ -534,7 +534,7 @@ h5 {
 }
 .inner {
   background-color: white;
-  padding: 0px 70px;
+  padding: 10px 70px;
 }
 .inner p {
   position: relative;
